# concord

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE-NOTES.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
config/: config.toml.example
crates/concord/: Cargo.toml
crates/concord-ast/: Cargo.toml
crates/concord-ast/src/: lib.rs
crates/concord-config/: Cargo.toml
crates/concord-config/src/: lib.rs
crates/concord-core/: Cargo.toml
crates/concord-core/src/: clock.rs  config.rs  directive.rs  error.rs  escalation.rs  ipc.rs  lib.rs  message.rs  model.rs  paths.rs  slug.rs  store.rs  telemetry.rs
crates/concord-core/tests/: store_integration.rs
crates/concord-mcp/: Cargo.toml
crates/concord-mcp/src/: main.rs
crates/concord/src/: hooks_embed.rs  launcher.rs  main.rs
crates/concordd/: Cargo.toml
crates/concordd/src/: main.rs  telemetry.rs
docs/: AGENT-MAIL-VERIFICATION.md  BACKLOG.md  COMPETITIVE-LANDSCAPE.md  DOGFOOD-RUNBOOK.md  FEATURE-RESEARCH.md  MANUAL.md  QUICKSTART.md  ROADMAP.md  WP12-RESEARCH.md  WP12-RUST-PORT.md
docs/adr/: 0000-template.md  0001-rust-rewrite.md  0002-refocus-enforced-core.md  0003-wave2-enforcement.md
hooks/: install.sh  lib.sh  post-tool.sh  pre-compact.sh  pre-tool.sh  session-end.sh  session-start.sh  shared-regions  statusline.sh  stop.sh  uninstall.sh  user-prompt.sh
scripts/: check-version.sh  install-hooks.sh  install.sh  wp6-ais-cutover.sh
tests/: ack-escalation.sh  all.sh  config.sh  contracts.sh  coord-sh-resolution.sh  daemon-e2e.sh  dogfood-smoke.sh  fencing-smoke.sh  hook-coord-passthrough.sh  hooks-enforce-smoke.sh  install-hooks-smoke.sh  launcher-smoke.sh  mcp-smoke.sh  multiproject.sh  parity-harness.sh  resource-locks.sh  symbol-locks.sh  telemetry-smoke.sh
