[package]
name = "concord-ast"
description = "AST symbol extraction (tree-sitter) for Concord's symbol-level leases (S2)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
streaming-iterator = "0.1.9"
tree-sitter = "0.26.10"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
